120_kubernetes/30_ingress/host-port.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    app: web
    version: "1"
spec:
  containers:
  - name: nginx
    image: nginx:1.27.2
    ports:
    - name: web
      containerPort: 80
      hostPort: 8080
