120_kubernetes/30_ingress/node-port.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  type: NodePort
  selector:
    app: web
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 32383
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    app: web
    version: "1"
spec:
  containers:
  - name: nginx
    image: nginx:1.27.2
    ports:
    - name: web
      containerPort: 80
