120_kubernetes/30_ingress/traefik.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60
      containers:
      - image: traefik:v2.10.4
        name: traefik
        imagePullPolicy: Always
        resources:
          requests:
            memory: "100Mi"
            cpu: "250m"
          limits:
            memory: "500Mi"
            cpu: "1000m"
        readinessProbe:
          httpGet:
            path: /ping
            port: 81
          failureThreshold: 1
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 2
        livenessProbe:
          httpGet:
            path: /ping
            port: 81
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 2
        volumeMounts:
        - mountPath: /etc/traefik
          name: config
        - name: tz-config
          mountPath: /etc/localtime
        ports:
        - name: http
          containerPort: 80
          hostPort: 80
          protocol: TCP
        - name: https
          containerPort: 443
          hostPort: 443
          protocol: TCP
        - name: dashboard
          containerPort: 8080
          protocol: TCP
        - name: metrics
          containerPort: 8082
          protocol: TCP
        args:
        - --configfile=/config/traefik.yaml
      volumes:
      - name: config
        configMap:
          name: traefik
      - name: tz-config
        hostPath:
          path: /usr/share/zoneinfo/Europe/Berlin
---
apiVersion: v1
kind: Service
metadata:
  name: traefik
  labels:
    app: traefik
spec:
  type: ClusterIP
  selector:
    app: traefik
  ports:
  - name: dashboard-http
    port: 80
    targetPort: 8080
  - name: metrics
    port: 8082
    targetPort: 8082
