120_kubernetes/30_ingress/infrastructure-as-code.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
spec:
  entryPoints:
  - https
  routes:
  - match: Host(`${DNS_NAME}`)
    kind: Rule
    services:
    - name: traefik-dashboard
      port: 80
      strategy: RoundRobin
  tls:
    secretName: traefik-dashboard
