120_kubernetes/30_ingress/ingressroute.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
spec:
  type: ClusterIP
  selector:
    app: traefik
  ports:
  - name: dashboard-http
    port: 80
    targetPort: 8080
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
spec:
  entryPoints:
  - http
  routes:
  - match: Host(`traefik.inmylab.de`)
    kind: Rule
    services:
    - name: traefik-dashboard
      port: 80
      strategy: RoundRobin
